# msda_etl

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: docker.yml  lint.yml  test.yml
src/etl/: __main__.py  common.py  config.py  context.py  loader.py  process.py
src/etl/csv/: code_logger.csv  concept_lookup.csv
src/etl/models/: etl_logger.py  lookupmodels.py  modelutils.py  source.py
src/etl/sql/: cdm_source_transform.py  condition_era_transform.py  condition_transform.py  create_logger_tables.py  create_lookup_tables.py  create_omopcdm_tables.py  create_source_tables.py  drug_era_transform.py  drug_exposure_transform.py  location_transform.py  measurement_transform.py  observation_period.py  observation_transform.py  person_transform.py  procedure_transform.py  visit_occurrence_transform.py
src/etl/transform/: cdm_source.py  condition.py  condition_era.py  create_logger_tables.py  create_lookup_tables.py  create_omopcdm_tables.py  create_source_tables.py  drug_era.py  drug_exposure.py  env_variables_log.py  etl_logging.py  etl_summary.py  (+11 more)
tests/: .coveragerc  test_process.py  testutils.py
tests/models/: test_ddl.py  test_logger.py  test_lookup.py  test_source.py  test_targets.py
tests/transform/: test_condition_occurrence.py  test_drug_exposure.py  test_location.py  test_measurement.py  test_observation.py  test_person.py  test_procedure_occurrence.py  test_visit_occurrence.py  transform_base.py  utils.py
(+79 files in other folders)
